# omnirag

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
benchmarks/: runner.py
charts/omnirag/: Chart.yaml  values.yaml
docker/: .env.example  docker-compose.full.yml  docker-compose.test.yml
docs/: GAPS-TO-10-PLAN.md  GRAPH-VISUALIZATION-UPGRADE-PLAN.md  GRAPHRAG-EXECUTION-PLAN.md  INTAKE-GATE-PLAN.md  INTAKE-GATE-UPDATE-PLAN.md  MICROSOFT-GRAPHRAG-INTEGRATION-PLAN.md  OMNIGRAPH-FEATURE-SPEC.md  OMNIGRAPH-FULL-IMPLEMENTATION-PLAN.md  OMNIGRAPH-IMPLEMENTATION-MAP.md  OUTPUT-LAYER-EXECUTION-PLAN.md  PORT-REGISTRY.md  REVIEW-G1-G19.md  WEAKNESS-FIX-PLAN.md
examples/: ensemble_pipeline.yaml  fallback_pipeline.yaml  local_ollama_pipeline.yaml  simple_rag.yaml
examples/christmas-carol/: README.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  GraphExplorer.tsx  GraphVisualization.tsx  IntakePanel.tsx  StatsPanel.tsx
frontend/lib/: api.ts
omnirag/: __init__.py  config.py  contracts.py  demo.py  persistence.py
omnirag/adapters/: __init__.py  base.py  defaults.py  registry.py
omnirag/api/: __init__.py  app.py  middleware.py  tasks.py
omnirag/cli/: main.py
omnirag/compiler/: __init__.py  planner.py
omnirag/config/: ports.py
omnirag/core/: __init__.py  exceptions.py  maturity.py  models.py
omnirag/graphrag/: __init__.py  algorithms.py  cache.py  context.py  incremental.py  metrics.py  models.py  projection.py  storage.sql  store.py
omnirag/intake/: __init__.py  cursor.py  defaults.py  detector.py  gate.py  lineage.py  models.py  state_machine.py
omnirag/integrations/: __init__.py  llamaindex.py  powerbi.py
omnirag/mcp/: __init__.py  tools.py
omnirag/models/: canonical.py
omnirag/output/: auth.py  (+7 more)
ops/: DEBUGGING.md  INCIDENT-RESPONSE.md  MONITORING.md
ops-ui/: app.py  requirements.txt
tests/: test_api.py  test_benchmark.py  test_chunking.py  test_compiler.py  test_config.py  test_dag.py  test_ingestion.py  test_loader.py  test_models.py  test_observability.py  test_registry.py  test_strategies.py  test_tasks.py
(+148 files in other folders)
